# inline-vbs

./: Cargo.toml  README.md  build.rs
include/: vbs.h
macros/: Cargo.toml  README.md
macros/src/: lib.rs  reconstruct.rs
src/: lib.rs  variant.rs  vbs.cpp
tests/: tests.rs
