[package]
name = "inline-vbs"
version = "0.2.1"
authors = ["Tom Niget <niget.tom@gmail.com>"]
description = "Embed VBScript code inside Rust"
homepage = "https://github.com/zdimension/inline-vbs"
repository = "https://github.com/zdimension/inline-vbs"
documentation = "https://docs.rs/inline-vbs"
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
keywords = ["inline", "rust", "vbscript", "wsh", "activescript"]
exclude = [
    ".idea/*"
]

[dependencies]
inline-vbs-macros = { version = "0.2", path = "./macros" }
cxx = "1.0.65"
winapi = { version = "0.3.9", features = ["oaidl", "wtypes", "oleauto"] }
widestring = "0.5.1"
enumn = "0.1.3"
dep_doc = "0.1.1"
variant-rs = "0.1"

[build-dependencies]
cxx-build = "1.0"

[workspace]
members = [
    "macros"
]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]