[package]
name = "inline-vbs"
version = "0.4.0"
authors = ["Tom Niget <niget.tom@gmail.com>"]
description = "Embed VBScript (and JScript, Ruby, Perl, ...) code inside Rust"
homepage = "https://github.com/zdimension/inline-vbs"
repository = "https://github.com/zdimension/inline-vbs"
documentation = "https://docs.rs/inline-vbs"
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
keywords = ["inline", "rust", "vbscript", "wsh", "activescript"]
exclude = [
    ".idea/*"
]

[dependencies]
inline-vbs-macros = { version = "0.4", path = "./macros" }
variant-rs = { version = "0.3.1" }
windows = { version = "0.48.0", features = ["Win32_System_Com", "Win32_System_Ole", "Win32_Foundation"] }
cxx = "1.0.94"
widestring = "1.0.2"
enumn = "0.1.8"
dep_doc = "0.1.1"

[build-dependencies]
cxx-build = "1.0"

[workspace]
members = [
    "macros"
]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]
