[package]
name = "inline-vbs-macros"
version = "0.1.0"
authors = ["Tom Niget <niget.tom@gmail.com>"]
description = "Macros for the `inline-vbs` crate"
homepage = "https://github.com/zdimension/inline-vbs"
repository = "https://github.com/zdimension/inline-vbs"
documentation = "https://docs.rs/inline-vbs"
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
keywords = ["embed", "inline", "vbs", "rust", "vbscript", "wsh", "activescript"]

[lib]
proc-macro = true

[dependencies]
litrs = "0.2.3"
proc-macro2 = "1.0"
quote = "1.0.15"
