[package]
name = "inline-vbs-macros"
version = "0.3.0"
authors = ["Tom Niget <niget.tom@gmail.com>"]
description = "Macros for the `inline-vbs` crate"
homepage = "https://github.com/zdimension/inline-vbs"
repository = "https://github.com/zdimension/inline-vbs"
documentation = "https://docs.rs/inline-vbs"
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
keywords = ["inline", "rust", "vbscript", "wsh", "activescript"]

[lib]
proc-macro = true

[dependencies]
litrs = "0.2.3"
paste = "1.0.11"
proc-macro2 = "1.0"
quote = "1.0.15"
